--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                             <h3 class="contact__subtitle">Call us for instant support</h3>
                             <span class="contact__description">
                                     <i class="ri-phone-line contact__icon"></i>
-                                    +999 888 777
+                                    +99893 748 91 41
                                 </span>
                         </div>
 
@@ -441,8 +441,8 @@
                 <h3 class="footer__title">Our Address</h3>
 
                 <ul class="footer__data">
-                    <li class="footer__information">1234 - Peru</li>
-                    <li class="footer__information">La Libertad - 43210</li>
+                    <li class="footer__information">Uzbekistan</li>
+                    <li class="footer__information">Tashkent Sergeli</li>
                     <li class="footer__information">123-456-789</li>
                 </ul>
             </div>
@@ -451,7 +451,7 @@
                 <h3 class="footer__title">Contact Us</h3>
 
                 <ul class="footer__data">
-                    <li class="footer__information">+999 888 777</li>
+                    <li class="footer__information">+99893 748 91 41</li>
 
                     <div class="footer__social">
                         <a href="https://www.facebook.com/" class="footer__social-link">
